# flight-monitor

./: .gitignore  .vercelignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  render.yaml  requirements.txt  vercel.json  vite.config.ts
.github/workflows/: deploy-exhaustive-viz.yml  deploy-nl-search-hf.yml  deploy-web-render.yml  deploy-web.yml  web-tests.yml
api/: index.py
deploy/: README.md
deploy/nl-search/: Dockerfile  README.md  push-hf.sh
deploy/pages/: build.sh
deploy/render/: deploy-blueprint.sh
docs/: template-watch-cron.example  video-bilibili-monitor.md
nl-search/: app.js  index.html  intent-editor.js  intent-query.js  matrix-editor.js  results-analytics.js  results-filter.js
openspec/: AGENTS.md
scripts/: airport_local_search.py  exhaustive_search.py  exhaustive_search_standalone.py  flight_search_engine.py  generate_flight_report.py  hits_table.md  holiday_windows.py  run-nl-search-dev.mjs  run-tauri.mjs  run_nl_example.py  sync_country_airports.py  test_billing.py  test_holiday_windows.py  test_matrix_intent.py  test_viz_export.py  verify_web_gateway.py
skill/: index.html
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: commands.rs  credentials.rs  error.rs  lib.rs  main.rs
src-tauri/src/db/: mod.rs  repository.rs
src-tauri/src/notification/: evaluator.rs  feishu.rs  mod.rs
src-tauri/src/polling/: engine.rs  mod.rs  scheduler.rs
src-tauri/src/rollinggo/: client.rs  mod.rs  quote.rs  types.rs
(+162 files in other folders)
