[package]
name = "flight-monitor"
version = "0.1.0"
description = "Flight price monitor desktop client"
authors = ["flight-monitor"]
edition = "2021"

[lib]
name = "flight_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
keyring = "3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
once_cell = "1"
